--- a/templates/clientes/info_cliente.html
+++ b/templates/clientes/info_cliente.html
@@ -3,11 +3,11 @@
 {% block title %}Pedidos{% endblock %}
 
 {% block content %}
-<main role="main" class="container mt-5">
   <div class="info-cliente">
 
     <!-- Perfil  -->
     <h1 class="mb-4">Perfil del Cliente: {{ cliente.nombre }}</h1>
+    <p style="font-style: italic ;font-size: 12px;margin-top: -25px;color: #871f23;"><strong>Usuario:</strong> {{ cliente.user }} </p>
     <div class="card mb-4">
       <div class="card-header">
         Información del Cliente
@@ -30,5 +30,4 @@
     </a>
 
   </div>
-</main>
 {% endblock %}
