--- a/templates/clientes/pedidos.html
+++ b/templates/clientes/pedidos.html
@@ -3,7 +3,6 @@
 {% block title %}Pedidos{% endblock %}
 
 {% block content %}
-<main role="main" class="container mt-5">
   <div class="info-cliente">
 
     <!-- Historial de pedidos  -->
@@ -11,6 +10,7 @@
       <h2>Historial de Pedidos</h2>
       <a href="{% url 'pedido_crear' %}" class="btn btn-primary">Nuevo Pedido</a>
     </div>
+
     <table class="table">
       <thead>
         <tr>
@@ -24,15 +24,14 @@
       <tbody>
         {% for pedido in pedidos %}
         <tr>
-          <th scope="row"><a href="">{{ pedido.id }}</a></th>
-          <td>{{ pedido.fecha }}</td>
-          <td>{{ pedido.destinatario.nombre }}</td>
-          <td>{{ pedido.estado }}</td>
-          <td> Ver detalle </td> <!-- rediccionar a el detalle del pedido  -->
+          <th scope="row" data-label="#">{{ pedido.id }}</a></th>
+          <td data-label="Fecha:">{{ pedido.fecha }}</td>
+          <td data-label="Destinatario:">{{ pedido.destinatario.nombre }}</td>
+          <td data-label="Estado:">{{ pedido.estado }}</td>
+          <td data-label="Detalle:"> Ver detalle </td> <!-- rediccionar a el detalle del pedido  -->
         </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
-</main>
 {% endblock %}
