--- a/templates/pagos/listado.html
+++ b/templates/pagos/listado.html
@@ -3,7 +3,7 @@
 {% block title %}Pagos{% endblock %}
 
 {% block content %}
-<main role="main" class="container mt-5">
+
   <div class="info-cliente">
 
     <!-- Lista de pagos  -->
@@ -21,11 +21,11 @@
       <tbody>
         {% for pago in pagos %}
         <tr>
-          <th scope="row">{{ pago.id }}</th>
+          <th scope="row" data-label="#">{{ pago.id }}</th>
           <!-- <th scope="row">{{ forloop.counter }}</th> -->
-          <td>{{ pago.metodo }}</td>
-          <td>{{ pago.estado }}</td>
-          <td>
+          <td data-label="Método">{{ pago.metodo }}</td>
+          <td data-label="Estado">{{ pago.estado }}</td>
+          <td data-label="Comprobante">
             {% if pago.comprobante %}
               <a href="{{ pago.comprobante.url }}" target="_blank">Ver Comprobante</a>
             {% else %}
@@ -60,7 +60,6 @@
       </tbody>
     </table>
   </div>
-</main>
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
