--- a/templates/pedidos/listado.html
+++ b/templates/pedidos/listado.html
@@ -10,7 +10,6 @@
 
 {% block content %}
 
-<main role="main" class="container mt-5">
   <div class="info-cliente">
 
     <!-- Historial de pedidos  -->
@@ -30,17 +29,13 @@
       <tbody>
         {% for pedido in pedidos %}
         <tr>
-          <th scope="row"><a href="">{{ pedido.id }}</a></th>
-          <td>{{ pedido.fecha }}</td>
-          <td>{{ pedido.cliente.nombre }}</td>
-          <td>{{ pedido.estado }}</td>
-          <td>{{ pedido.pago.estado }}</td>
-          <td>{{ pedido.destinatario.nombre }}</td>
+          <th scope="row" data-label="#">{{ pedido.id }}</a></th>
+          <td data-label="Fecha">{{ pedido.fecha }}</td>
+          <td data-label="Cliente">{{ pedido.cliente.nombre }}</td>
+          <td data-label="Estado">{{ pedido.estado }}</td>
+          <td data-label="Pago">{{ pedido.pago.estado }}</td>
+          <td data-label="Destinatario">{{ pedido.destinatario.nombre }}</td>
           <td>
-            </form>
-            
-            <div class="producto-opciones">
-            </div>
 
             <a href="{% url 'detalle_pedido' pedido.id %}" class="btn btn-info btn-sm">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -57,7 +52,7 @@
       </tbody>
     </table>
   </div>
-</main>
+  
 
 <div class="modal fade" id="agregarProductoModal" tabindex="-1" aria-labelledby="agregarProductoModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
