Form destinatario, cambio base id user

--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="producto-opciones">
-                <a class="button" href="{% url 'nuevo_pedido' %}">Realizar Pedido</a>
+                <a class="button" href="{% url 'pedido_crear' %}">Realizar Pedido</a>
             </div>
         </li>
 
