--- a/static/css/main.css
+++ b/static/css/main.css
@@ -248,6 +248,26 @@ main ul li {
   transition: background-color 0.3s, color 0.3s;
 }
 
+.nuevo-pedido {
+  float: right;
+  
+  background-color: #871f23;
+  color: #fffdfd;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.nuevo-pedido:hover {
+  text-decoration: none;
+  background-color: #ec9813;
+  color: #fffdfd;
+  font-weight:normal;
+}
+
 .filtro-categoria {
   background-color: #fff; /* Color de fondo predeterminado */
 }
