--- a/templates/clientes/pedidos.html
+++ b/templates/clientes/pedidos.html
@@ -24,7 +24,8 @@
       <tbody>
         {% for pedido in pedidos %}
         <tr>
-          <th scope="row" data-label="#">{{ pedido.id }}</a></th>
+          <th scope="row" data-label="#">{{ forloop.counter }}</th>
+          <!-- <th scope="row" data-label="#">{{ pedido.id }}</a></th> -->
           <td data-label="Fecha:">{{ pedido.fecha }}</td>
           <td data-label="Destinatario:">{{ pedido.destinatario.nombre }}</td>
           <td data-label="Estado:">{{ pedido.estado }}</td>
