--- a/templates/pedidos/listado.html
+++ b/templates/pedidos/listado.html
@@ -29,7 +29,8 @@
       <tbody>
         {% for pedido in pedidos %}
         <tr>
-          <th scope="row" data-label="#">{{ pedido.id }}</a></th>
+          <th scope="row" data-label="#">{{ forloop.counter }}</th>
+          <!-- <th scope="row" data-label="#">{{ pedido.id }}</a></th> -->
           <td data-label="Fecha">{{ pedido.fecha }}</td>
           <td data-label="Cliente">{{ pedido.cliente.nombre }}</td>
           <td data-label="Estado">{{ pedido.estado }}</td>
