--- a/templates/clientes/pedidos.html
+++ b/templates/clientes/pedidos.html
@@ -8,7 +8,7 @@
     <!-- Historial de pedidos  -->
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Historial de Pedidos</h2>
-      <a href="{% url 'pedido_crear' %}" class="btn btn-primary">Nuevo Pedido</a>
+      <a href="{% url 'pedido_crear' %}" class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i> Nuevo Pedido</a>
     </div>
 
     <table class="table">
