--- a/templates/pedidos/pago.html
+++ b/templates/pedidos/pago.html
@@ -8,72 +8,11 @@
     <hr>
 
     <!-- Formulario principal de Finalizar Pedido -->
-    <form method="post">
+    <form method="post" action="{% url 'nuevo_pago' pedido_id %}" enctype="multipart/form-data">
       {% csrf_token %}
-      {{ formulario.as_p }}
+      {{ formulario_pago.as_p }}
       <input type="submit" value="Guardar" class="btn btn-primary">
     </form>
-
-    <!-- Botones para mostrar formularios adicionales -->
-    <button type="button" class="btn btn-secondary mt-3 mb-3" onclick="mostrarFormulario('pago')">Agregar Pago</button>
-    <button type="button" class="btn btn-secondary mt-3 mb-3" onclick="mostrarFormulario('destinatario')">Agregar Destinatario</button>
-
-    <!-- Formulario de Nuevo Pago -->
-    <div id="formulario-pago" style="display: none;">
-      <h1>Nuevo Pago</h1>
-      <hr>
-      <form method="post" action="{% url 'nuevo_pago' %}">
-        {% csrf_token %}
-        {{ formulario_pago.as_p }}
-        <input type="submit" value="Guardar" class="btn btn-primary">
-      </form>
-      {% if mensaje_error_pago %}
-        <div class="alert alert-danger mt-3">
-          {{ mensaje_error_pago }}
-        </div>
-      {% endif %}
-      {% if formulario_pago.errors %}
-      <ul>
-        {% for field in formulario_pago %}
-          {% for error in field.errors %}
-            <li>{{ error }}</li>
-          {% endfor %}
-        {% endfor %}
-        {% for error in formulario_pago.non_field_errors %}
-          <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
-    </div>
-
-    <!-- Formulario de Nuevo Destinatario -->
-    <div id="formulario-destinatario" style="display: none;">
-      <h1>Nuevo Destinatario</h1>
-      <hr>
-      <form method="post" action="{% url 'nuevo_destinatario' pedido_id=pedido_id %}">
-        {% csrf_token %}
-        {{ formulario_destinatario.as_p }}
-        <input type="submit" value="Guardar" class="btn btn-primary">
-    </form>
-      {% if mensaje_error_destinatario %}
-        <div class="alert alert-danger mt-3">
-          {{ mensaje_error_destinatario }}
-        </div>
-      {% endif %}
-      {% if formulario_destinatario.errors %}
-      <ul>
-        {% for field in formulario_destinatario %}
-          {% for error in field.errors %}
-            <li>{{ error }}</li>
-          {% endfor %}
-        {% endfor %}
-        {% for error in formulario_destinatario.non_field_errors %}
-          <li>{{ error }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
-    </div>
-  </div>
 
 <script>
   function mostrarFormulario(tipo) {
