--- a/templates/enviar_correo.html
+++ b/templates/enviar_correo.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enviar Correo</title>
-</head>
-<body>
-    <h1>Enviar Correo Electrónico</h1>
+{% extends 'menu.html' %}
 
-    <form method="POST">
-        {% csrf_token %}
-        {{ formulario.as_p }}
-        <button type="submit">Enviar</button>
-    </form>
-</body>
-</html>
+{% block title %}Enviar Correo{% endblock %}
+
+{% block content %}
+
+<h1>Enviar Correo Electrónico</h1>
+
+<form method="POST">
+    {% csrf_token %}
+    {{ formulario.as_p }}
+    <button type="submit">Enviar</button>
+</form>
+
+{% endblock %}
